--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,12 @@
-div{
-    color: blue;
+.button{
+    color: black;
+    background-color: bisque;
+    font-size: 30px;
+}
+
+.title{
+    font-size: 60px;
+    text-align: center;
+    color: white;
+    background-color: green;
 }
